--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="navigation_timetable">Timetable</string>
     <string name="navigation_map">Live map</string>
+    <string name="navigation_search">Search</string>
+
+    <string name="search_hint">Stop name</string>
 
     <string name="google_maps_key">AIzaSyDbzS8CBF-mAMWY7z-CE_QXC0JYvVy65V0</string>
 </resources>
