--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="navigation_map">Live map</string>
     <string name="navigation_search">Search</string>
 
-    <string name="error">Server not responding</string>
+    <string name="big_error">Server not responding</string>
+    <string name="small_error">Live departures unavailable</string>
 
     <string name="search_hint">Stop name</string>
 
