--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="navigation_map">Live map</string>
     <string name="navigation_search">Search</string>
 
-    <string name="big_error">Server not responding</string>
-    <string name="small_error">Live departures unavailable</string>
+    <string name="error_big">Failed to load Departures</string>
+    <string name="error_bus">Real-time bus departures are unavailable</string>
+    <string name="error_train">Real-time train departures are unavailable</string>
 
     <string name="search_hint">Stop name</string>
 
