--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Tallinn Transport</string>
 
@@ -8,8 +9,26 @@
     <string name="error_big">Failed to load Departures</string>
     <string name="error_bus">Real-time bus departures are unavailable</string>
     <string name="error_train">Real-time train departures are unavailable</string>
+    <string name="error_setup">Failed to lauch app due to network connection/internal error</string>
+    <string name="error_name">Error</string>
+    <string name="error_retry">Retry</string>
+    <string name="error_unsupported">Not TLT or Elron stop</string>
+    <string name="error_save">Error saving stops to internal storage</string>
+    <string name="error_elron_down">Error connecting to ELRON webserver</string>
+    <string name="error_elron_parse">Error parsing response from ELRON webserver</string>
+    <string name="error_tlt_down">Error connecting to TLT webserver</string>
+    <string name="error_tlt_parse">Error parsing response from TLT webserver</string>
 
     <string name="search_hint">Stop name</string>
+    <string name="arrives_cont">Arrives: </string>
+    <string name="loading">Loading</string>
+    <string name="no_departures">No Departures</string>
+
+    <string name="setup_welcome">Welcome to Tallinn Transport</string>
+    <string name="setup_1">Completing first time setup</string>
+    <string name="setup_2">This app needs location permission in order to quickly show departures around you</string>
+    <string name="setup_grant">Grant</string>
+    <string name="setup_start">Start</string>
 
     <string name="google_maps_key">AIzaSyDbzS8CBF-mAMWY7z-CE_QXC0JYvVy65V0</string>
 </resources>
