--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -60,4 +60,10 @@
     <string name="setup_start">Начать</string>
 
     <string name="google_maps_key">AIzaSyDbzS8CBF-mAMWY7z-CE_QXC0JYvVy65V0</string>
+
+
+    <string name="settings">Настройки</string>
+    <string name="settings_ticket_beta">Бета-тест билетов Elron</string>
+    <string name="settings_ticket_beta_on">Пожалуйста отправляйте отзывы на alex@thatguyalex.com</string>
+    <string name="settings_ticket_beta_off">Нажмите чтобы активировать</string>
 </resources>
