--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="navigation_map">Live map</string>
     <string name="navigation_search">Search</string>
     <string name="navigation_ticket">Tickets</string>
-    <string name="toolbar_settings">Settings</string>
 
     <string name="error_location">Failed to determine your location</string>
     <string name="error_big">Failed to load Departures</string>
@@ -63,4 +62,11 @@
     <string name="setup_start">Start</string>
 
     <string name="google_maps_key">AIzaSyDbzS8CBF-mAMWY7z-CE_QXC0JYvVy65V0</string>
+
+
+    <string name="settings">Settings</string>
+    <string name="settings_ticket_beta">Elron Ticket Beta</string>
+    <string name="settings_ticket_beta_on">Please send feedback to alex@thatguyalex.com</string>
+    <string name="settings_ticket_beta_off">Click to start participating</string>
+
 </resources>
